# gscam

./: .gitignore  CMakeLists.txt
config/: hexa.yaml  mono.yaml  quad.yaml
include/gscam/: gscam.hpp
launch/: hexa.launch.py  mono.launch.py  quad.launch.py
src/: gscam.cpp
